# backtest-factor-clinic

./: .gitignore  AI_EVALUATION_GUIDE.md  README.md  dashboard.py  data_adapter.py  generate_synth_csv.py  pyproject.toml  run_demo.sh
.github:workflows/: test.yaml
checklists/: backtest_qa_checklist.md  ml_finance_checklist.md
factor_critiques/: momentum_sector_neutralization.md  value_trailing_pe.md
notebooks/corrected/: 01_momentum_lookahead_fixed.py  02_value_survivorship_fixed.py  03_multifactor_overfitting_fixed.py  04_ml_leakage_fixed.py  run_diagnosis.py
notebooks/flawed/: 01_momentum_lookahead_bias.py  02_value_survivorship_bias.py  03_multifactor_overfitting.py  04_ml_label_leakage.py
prompts/: llm_diagnosis_prompts.md
skills/backtest_diagnostician/: SKILL.md  wrapper.py
